--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Navigation Links -->
         <header class="header">
             <nav>
-                <a href="about.html" class="contact-link smaller-text">About</a>
+                <a href="index.html" class="contact-link smaller-text">About</a>
                 <a href="portfolio.html" class="contact-link smaller-text">Portfolio</a>
                 <a href="essays.html" class="contact-link smaller-text">Essays</a>
             </nav>
